# FastAPI-CRUD-Demo

./: .gitignore  LICENSE  README-en.md  README.md  init.sql  pyproject.toml
app/: config.py  database.py  main.py
app/api/: response_route.py
app/api/v1/: auth.py  roles.py  router.py  users.py
app/exceptions/: handlers.py
app/middleware/: __init__.py  auth.py  logging.py  trace.py
app/models/: __init__.py  request_log.py  role.py  user.py
app/schemas/: response.py  role.py  user.py
app/services/: auth.py  role.py  user.py
