[project]
name = "fastapi-demo"
version = "0.1.0"
description = "FastAPI CRUD demo for user management"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    "pymysql>=1.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
]
